// This is the public API offered by your entity.
syntax = "proto3";

import "google/protobuf/empty.proto";
import "akkaserverless/annotations.proto";
import "google/api/annotations.proto";

package com.example;

option go_package = "$packageInPathFormat";
option java_outer_classname = "MyEntity";

message SetValueCommand {
    string entity_id = 1 [(.akkaserverless.field).entity_key = true];
    int32 value = 2;
}

message GetValueCommand {
    string entity_id = 1 [(.akkaserverless.field).entity_key = true];
}

message MyState {
    int32 value = 1;
}

service MyServiceEntity {
    rpc SetValue(SetValueCommand) returns (google.protobuf.Empty);
    rpc GetValue(GetValueCommand) returns (MyState);
}
